<?xml version="1.0" encoding="utf-8"?>
<resources>
    String resources
    <string name="app_name">Service App</string>
    <string name="sign_in">Sign In</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="phone_number_check">Phone number check</string>
    <string name="verification">Verification</string>
    <string name="enter_text">Enter the text</string>
    <string name="username">Username</string>
    <string name="new_username">New username</string>
    <string name="email">Email</string>
    <string name="new_email">New email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="password_update">Update password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="verify_text">Verify</string>
    <string name="send_otp_text">Send OTP</string>
    <string name="exit_text">Exit</string>
    <string name="delete_account_text">Delete account</string>
    <string name="sign_in_with_social_networks">Sign in with social networks</string>
    <string name="registration_sign_up">Don\'t have an account? Create it</string>
    <string name="google" translatable="false">Google</string>
    <string name="or">Or</string>
    <string name="also">Also</string>
    <string name="with_phone_number">With phone number</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="type">Type</string>
    <string name="service">Service</string>
    <string name="service_description">Service description</string>
    <string name="price">Price</string>
    <string name="time">Lead time</string>
    <string name="master">Master</string>
    <string name="master_description">Master Description</string>
    <string name="experience">Experience</string>
    <string name="rating">Rating</string>
    <string name="employeeId">Employee ID</string>
    <string name="addMaster">Add Master</string>
    <string name="addService">Add Service</string>
    <string name="submit">Submit</string>
    <string name="makeOrder">Make Order</string>
    <string name="save">Save</string>
    <string name="confirm_data">Confirm data</string>
    <string name="cancel">Cancel</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="change_username">Change username</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="announcement">Announcements</string>
    <string name="seconds">seconds</string>
    <string name="yes">Yes</string>

    Text notification
    <string name="sign_in_user_not_found_message">Account not found, try again or sign up</string>
    <string name="incorrect_pass_message">Incorrect password</string>
    <string name="sign_in_success_message">You are successfully signed in</string>
    <string name="sign_up_success_message">You are successfully signed up</string>
    <string name="check_phone_number_message">Check your country code and enter your phone number</string>
    <string name="correct_phone_number_message">Enter correct phone number</string>
    <string name="enter_number_message">Enter phone number</string>
    <string name="enter_email_message">Enter email</string>
    <string name="successful_authentication_message">Successful authentication</string>
    <string name="correct_otp_message">Enter correct OTP</string>
    <string name="user_null_message">User info unavailable, re-authenticate</string>
    <string name="wrong_otp_message">You have passed wrong otp key, try again</string>
    <string name="otp_message">Enter OTP</string>
    <string name="name_message">Enter your name</string>
    <string name="enter_email_and_pass_message">Enter email and pass</string>
    <string name="account_deleted_message">Your account successfully deleted</string>
    <string name="account_deleted_confirmation_message">Are you sure that you want to delete your account with all data?</string>
    <string name="enter_value_message">Value required</string>
    <string name="enter_correct_data_message">Enter correct data</string>
    <string name="username_changed_message">Username successfully changed</string>
    <string name="email_changed_message">Email successfully changed</string>
    <string name="uri_changed_message">URI successfully changed</string>
    <string name="image_loading_error_message">Image loading error</string>
    <string name="empty_field_error_message">Empty field</string>
    <string name="database_error_message">Database request failed. Repeat later</string>
    <string name="long_username_message">Username is too long</string>
    <string name="wrong_password_length_message">The password must contain from 6 to 15 characters</string>
    <string name="incorrect_email_message">Enter correct email (e.g. username@gmail.com)</string>
    <string name="phone_registered_message">This phone number is already registered, please enter another one</string>
    <string name="get_otp_later_message">Impossible to get OTP. Try again in</string>
    <string name="add_phone_number">Add phone number</string>

    Saved values
    <string name="view_type">View type</string>
    <string name="russian">Russian</string>
    <string name="key_russian" translatable="false">RUSSIAN</string>
    <string name="english">English</string>
    <string name="key_english" translatable="false">ENGLISH</string>
    <string name="user">User</string>
    <string name="key_user" translatable="false">USER</string>
    <string name="admin">Admin</string>
    <string name="key_admin" translatable="false">ADMIN</string>
    <string name="country_code" translatable="false">Country code</string>
    <string name="key_country_code" translatable="false">+91</string>

    <string name="language_header">App language</string>
    <string name="key_language_header" translatable="false">LANGUAGE</string>
    <string name="access_header">Access</string>
    <string name="key_access_header" translatable="false">ACCESS</string>

    <string name="access" translatable="false">ACCESS</string>
    <string name="key_access" translatable="false">USER</string>

    <string name="common_preferences_title">Common settings</string>
    <string name="access_title">Access</string>
    <string name="language_title">Application language</string>

    Key
    <string name="your_web_client_id" translatable="false">607161883-tc5te2ivsfi906l4ush7t4rfhfqsj4vv.apps.googleusercontent.com</string>
</resources>