<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enter_data_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please, enter your new data"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_enter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/corner_layout"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_data_tv" />

    <EditText
        android:id="@+id/email_enter"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/corner_layout"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/name_enter"
        app:layout_constraintStart_toStartOf="@+id/name_enter"
        app:layout_constraintTop_toBottomOf="@+id/name_enter" />

    <EditText
        android:id="@+id/password_enter"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/corner_layout"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/email_enter"
        app:layout_constraintStart_toStartOf="@+id/email_enter"
        app:layout_constraintTop_toBottomOf="@+id/email_enter" />

</androidx.constraintlayout.widget.ConstraintLayout>