<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/very_light_grey"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/password_update"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/white"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/updatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@android:color/white"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/updateNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--       android:id="@+id/passwordEditText"-->
    <!--       android:layout_width="match_parent"-->
    <!--       android:layout_height="60dp"-->
    <!--       android:background="@drawable/corner_layout"-->
    <!--       android:drawableStart="@drawable/lock"-->
    <!--       android:drawablePadding="12dp"-->
    <!--       android:ems="10"-->
    <!--       android:hint="@string/password"-->
    <!--        android:textColorHint="@color/light_grey"-->
    <!--       android:inputType="textPassword"-->
    <!--       android:paddingStart="12sp"-->
    <!--       android:paddingEnd="12sp"-->
    <!--       android:textColor="@color/black"-->
    <!--       android:textSize="20sp" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/newPasswordEditText"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="60dp"-->
    <!--        android:layout_marginTop="15sp"-->
    <!--        android:background="@drawable/corner_layout"-->
    <!--        android:drawableStart="@drawable/lock"-->
    <!--        android:drawablePadding="12dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/new_password"-->
    <!--        android:textColorHint="@color/light_grey"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:paddingStart="12sp"-->
    <!--        android:paddingEnd="12sp"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="20sp" />-->

</LinearLayout>